Moved light related environment classes to specific packages